src/tests/testfiles/unary-operators/types-10.txt
Error at 5:10: invalid type argument of unary '*' (have 'char')
a = *b[0];
     ^
